2024-08-26 Roy Hills <royhills@hotmail.com>

	* configure.ac: Unconditionally add -Wextra to GCC and Clang compiler
	  options instead of using the GCC_WEXTRA macro. -Wextra was added in
	  GCC 3.4.0, which is 20 years old now, and has always been supported
	  by Clang. There are no supported systems with earlier GCC versions.
	  https://github.com/royhills/arp-scan/pull/190

	* m4/gcc-wextra.m4: Removed.

2024-08-14 Roy Hills <royhills@hotmail.com>

	* get-iab: removed. This script is no longer needed and was depreciated
	  in arp-scan 1.10.
	  https://github.com/royhills/arp-scan/pull/184

	* ieee-oui.txt: Updated from IEEE registry. Total of 52119 MAC/Vendor
	  mappings (4575 IAB + 5461 MAM + 35971 OUI + 6112 OUI36).
	  https://github.com/royhills/arp-scan/pull/185

	* configure.ac, m4/*: Move local autoconf macros from acinclude.m4
	  to seperate files under m4/, which is specified with
	  AC_CONFIG_MACRO_DIRS in configure.ac. configure.ac now requires
	  at least autoconf 2.70 (was previously 2.69).

2024-03-29 Roy Hills <royhills@hotmail.com>

	* arp-fingerprint: Added recent Windows and FreeBSD patterns.

2024-01-10 Roy Hills <royhills@hotmail.com>

	* arp-scan.c: Use printf() instead of warn_msg() for the "Target list
	  from interface" message so the output is sent to stdout instead of
	  stderr.

2024-01-04 Roy Hills <royhills@hotmail.com>

	* configure.ac, README.md: Require C compiler with C99 language support.
	  configure will exit with the error message "C compiler does not
	  support C99 standard" if C99 support is not present.
	  arp-scan currently uses C89 but use of C99 features is planned for
	  the next release.
	  https://github.com/royhills/arp-scan/pull/171

	* arp-scan.c: flush stdout output buffer after displaying each response.
	  This ensures that responding hosts are seen immediately when reading
	  from a pipeline rather than having to wait until the output buffer
	  is filled.
	  https://github.com/royhills/arp-scan/pull/172
